# sing-box-config-generator

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  README.md  SUBSCRIPTION_PARSER_FIX.md  SUBSCRIPTION_UPDATE.md  biome.json  components.json  package-lock.json  package.json  rsbuild.config.ts  sing-box-config-generator.service  test-subscribe-api.sh  test-subscription-parser.sh  tsconfig.json
.claude/: CHANGELOG-START-SKILL.md  QUICK-START-TELEGRAM.md  telegram-config.md
.claude/scripts/: deploy.sh  telegram-notify.sh
.claude/skills/add-config-module/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/fix-config/: SKILL.md
.claude/skills/notify-telegram/: SKILL.md
.claude/skills/start/: SKILL.md
.husky/: pre-commit
src/: main.rs
src/backend/: error.rs  mod.rs  subscription_parser.rs
src/backend/api/: backup.rs  config.rs  config_generator.rs  config_generator_test.rs  dns.rs  dns_config.rs  experimental.rs  filter.rs  inbound.rs  log.rs  mod.rs  outbound.rs  outbound_group.rs  outbound_group_test.rs  route.rs  rule.rs  ruleset.rs  subscribe.rs  usage_check.rs
src/backend/migration/: migrations.rs  mod.rs
src/frontend/: index.css  index.tsx
src/frontend/api/: usage-check.ts
src/frontend/components/: app-page.tsx  app-sidebar.tsx  config-card-new.tsx  config-card.tsx  config-form.tsx  config-management-card.tsx  config-row.tsx  editor-bottom-bar.tsx  editor-header.tsx  empty-state.tsx  filter-editor.tsx  focus-editor.tsx  form-editor.tsx  json-editor.tsx  nav-main.tsx  radio-card.tsx  (+10 more)
(+96 files in other folders)
